--- a/Manifest.json
+++ b/Manifest.json
@@ -30,7 +30,7 @@
     ],
 
     "version" : "trunk",
-    "qooxdoo-versions": ["1.4","1.5","1.6","2.0","3.0","3.5"]
+    "qooxdoo-versions": ["1.4","1.5","1.6","2.0","3.0","3.5","4.0","4.1"]
   },
   
   "provides" : 
