--- a/Manifest.json
+++ b/Manifest.json
@@ -7,7 +7,7 @@
     "description" : "",
     
     "keywords" : ["qooxdoo", "widget", "cross-browser", "upload"],
-    "homepage" : "http://qooxdoo.org/contrib/project/uploadwidget",
+    "homepage" : "https://github.com/oetiker/UploadWidget",
 
     "license" : "LGPL/EPL",
     "authors" : 
@@ -30,7 +30,7 @@
     ],
 
     "version" : "trunk",
-    "qooxdoo-versions": ["1.4","1.5","1.6","2.0","3.0","3.5","4.0","4.1"]
+    "qooxdoo-versions": ["1.4 - 5.x"]
   },
   
   "provides" : 
