--- a/config.json
+++ b/config.json
@@ -8,31 +8,14 @@
     }
   ],
 
-  "export" :
-  [
-    "api",
-    "clean",
-    "distclean",
-    "fix",
-    "info",
-    "inspector",
-    "lint",
-    "migration",
-    "pretty",
-    "test",
-    "test-source",
-    "translation"
-  ],
-
   "let" :
   {
     "APPLICATION"  : "uploadwidget",
-    "APPLICATION_MAIN_CLASS" : "${APPLICATION}.demo.Demo",
-    "QOOXDOO_PATH" : "../../qooxdoo/4.1",
     "QXTHEME"      : "qx.theme.Modern",
     "API_EXCLUDE"  : ["qx.test.*", "qxjqplot.demo.*", "${APPLICATION}.theme.*", "${APPLICATION}.test.*"],
     "LOCALES"      : [ "en" ],
     "CACHE"        : "${TMPDIR}/qooxdoo-cache",
-    "ROOT"         : "."
+    "ROOT"         : ".",
+    "RESPATH": "./source/resource"
   }
 }
