--- a/package.json
+++ b/package.json
@@ -1,10 +1,5 @@
 {
   "dependencies": {
-    "qxcompiler": "^0.2.13",
-    "qooxdoo-sdk": "^6.0.0-alpha"
-  },
-  "scripts": {
-    "lint": "eslint ./source/class/osparc/**/*.js",
-    "build": "node_modules/.bin/qx compile --target=source"
+    "@qooxdoo/compiler": "^1.0.0-beta.20190725-1034"
   }
 }
